stylesheets/_component.timeline.scss
/* ... */
.timeline-content__inner {
    overflow: hidden;
}

.timeline__item .timeline-content.has-warning {
    border-color: #e48f3d;
    background: lighten(#eaa96a, 15%);
    color: $jadu-black;

    @include respond-min($screen-tablet) {
        &::after {
            border-color: rgba(136, 183, 213, 0);
            border-right-color: #f3d0ad;
            border-width: 7px;
            margin-top: -7px;
        }

        &::before {
            border-color: rgba(194, 225, 245, 0);
            border-right-color: #a45c17;
            border-width: 8px;
            margin-top: -8px;
        }
    }

    .form__control:not([type="file"]) {
        border-color: #e48f3d;
    }
}

.thumbnail-filename {
    display: block;
    font-size: .9em;
}

.timeline__form {
    background: none;
    padding: 0;
    position: relative;
}

.timeline__message-field {
    background-color: color(white) !important;
    border-radius: 4px;
    border: 1px solid $timeline-content-border;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    color: #1e1e1e;
    display: block;
    font-size: 16px;
    height: 36px;
    line-height: 24px;
    padding: 5px 12px !important;
    max-width: 100%;
    vertical-align: middle;
    width: 100%;
}

.timeline__message-label {
    @include visuallyhidden;
}

.timeline__form__controls {
    @include clear-fix(true);

    padding: 0;
}

.timeline__status-select {
    display: inline-block;
    font-size: 14px;
    height: 30px;
    line-height: 30px;
    margin-top: 10px;
    width: auto;

    @include respond-min($screen-tablet) {
        margin-top: 0;
    }
}

.timeline__form__control,
.timeline__status-undo {
    font-size: 14px;
    line-height: 26px;
    margin: 0 1em 0 0;
    text-decoration: none;
}

.timeline__undo-link {
    display: block;

    @include respond-min($screen-tablet) {
        display: inline-block;
    }
}

.has-timeline {
    .tabs__content {
        display: block;
    }
}

.timeline__prologue {
    display: block;
    margin: ($padding-base * 2) 0;
    text-align: center;

    @include respond-min($screen-tablet) {
        margin: 0 0 ($padding-base * 2);
    }
}

.has-timeline .actionsbar {
    margin: 14px $padding-base 0;

    @include respond-min($screen-tablet) {
        margin: 14px 0 16px;
    }
}

.interstitial-warning {
    margin: $padding-base 0 0;
    text-align: right;
}

.timeline__attach-file.is-disabled {
    cursor: default;
    opacity: .5;
    pointer-events: none;

    &:hover,
    &:focus,
    &:active {
        color: initial;
    }
}

.timeline__attach-file-error {
    color: color(danger);
    font-size: 14px;
    line-height: 1.5;
    margin: .675em 0 0;
}

.timeline__attachment-feedback .timeline__attach-file-error {
    padding-top: 1em;
}

.timeline-content__text,
.timeago {
    color: black;
}

.panel.with-timeline .panel__actions {
    margin-bottom: 10px;
    margin-left: 70px;
}

